Fix horizontal scroll, hide elements if off screen instead

--- a/src/app/customer/page.module.css
+++ b/src/app/customer/page.module.css
@@ -14,7 +14,8 @@
     width: calc(100% - 300px);
     padding: 20px;
 
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 
     display: flex;
     flex-direction: column;
